welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: not found: value setBrosseCouleur
	setBrosseCouleur(c)
        ^FlowerPot:11: error: not found: value setBrosseCouleur
	setBrosseCouleur(Color:YELLOW)
        ^FlowerPot:18: error: not found: type RED
	Fleur(Color:RED)
                    ^FlowerPot:20: error: not found: type CYAN
	Fleur(Color:CYAN)
                    ^FlowerPot:25: error: not found: type ORANGE
	Fleur(Color:ORANGE)
                    ^FlowerPot:30: error: not found: type PINK
	Fleur(Color:PINK)
                    ^FlowerPot:32: error: not found: type GREEN
	Fleur(Color:GREEN)
                    ^